# pleiades_data_quality

./: README.md  pyproject.toml
scripts/: issues2csv.py  report.py
src/: place.py
tests/: test_place.py
